--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <ul>
               <li><a href="#">Home</a></li>
               <li><a href="#">About</a></li>
+              <li><a href="product.html">Product</a></li>
               
               <li><a href="#">Order</a></li>
               <li><a href="#">Contact</a></li>
