updating the product page

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
           </div>
           <div class="nav_lists">
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About</a></li>
               <li><a href="product.html">Product</a></li>
               
-              <li><a href="#">Order</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="order.html">Order</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
