--- a/product.html
+++ b/product.html
@@ -50,7 +50,155 @@
         </div>
       </nav>
     </header>
-    <section class="footer__section"></section>
+    <section class="product__section">
+      <h1>Our <span>Products</span></h1>
+      <div class="product__main--items">
+        <div class="products__main">
+          <div class="product__main--img">
+            <img src="./img/dish/spicy.png" alt="img" />
+          </div>
+          <div class="product__main--text">
+            <h2>Breads</h2>
+            <p>$3.15</p>
+            <div class="product__rating">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+            </div>
+            <button class="btn category-btn">Add To Cart</button>
+          </div>
+        </div>
+        <div class="products__main">
+          <div class="product__main--img">
+            <img src="./img/dish/spicy.png" alt="img" />
+          </div>
+          <div class="product__main--text">
+            <h2>Breads</h2>
+            <p>$3.15</p>
+            <div class="product__rating">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+            </div>
+            <button class="btn category-btn">Add To Cart</button>
+          </div>
+        </div>
+        <div class="products__main">
+          <div class="product__main--img">
+            <img src="./img/dish/spicy.png" alt="img" />
+          </div>
+          <div class="product__main--text">
+            <h2>Breads</h2>
+            <p>$3.15</p>
+            <div class="product__rating">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+            </div>
+            <button class="btn category-btn">Add To Cart</button>
+          </div>
+        </div>
+        <div class="products__main">
+          <div class="product__main--img">
+            <img src="./img/dish/spicy.png" alt="img" />
+          </div>
+          <div class="product__main--text">
+            <h2>Breads</h2>
+            <p>$3.15</p>
+            <div class="product__rating">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+            </div>
+            <button class="btn category-btn">Add To Cart</button>
+          </div>
+        </div>
+        <div class="products__main">
+          <div class="product__main--img">
+            <img src="./img/dish/spicy.png" alt="img" />
+          </div>
+          <div class="product__main--text">
+            <h2>Breads</h2>
+            <p>$3.15</p>
+            <div class="product__rating">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+            </div>
+            <button class="btn category-btn">Add To Cart</button>
+          </div>
+        </div>
+        <div class="products__main">
+          <div class="product__main--img">
+            <img src="./img/dish/spicy.png" alt="img" />
+          </div>
+          <div class="product__main--text">
+            <h2>Breads</h2>
+            <p>$3.15</p>
+            <div class="product__rating">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+            </div>
+            <button class="btn category-btn">Add To Cart</button>
+          </div>
+        </div>
+        <div class="products__main">
+          <div class="product__main--img">
+            <img src="./img/dish/spicy.png" alt="img" />
+          </div>
+          <div class="product__main--text">
+            <h2>Breads</h2>
+            <p>$3.15</p>
+            <div class="product__rating">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+            </div>
+            <button class="btn category-btn">Add To Cart</button>
+          </div>
+        </div>
+        <div class="products__main">
+          <div class="product__main--img">
+            <img src="./img/dish/spicy.png" alt="img" />
+          </div>
+          <div class="product__main--text">
+            <h2>Breads</h2>
+            <p>$3.15</p>
+            <div class="product__rating">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+            </div>
+            <button class="btn category-btn">Add To Cart</button>
+          </div>
+        </div>
+        <div class="products__main">
+          <div class="product__main--img">
+            <img src="./img/dish/spicy.png" alt="img" />
+          </div>
+          <div class="product__main--text">
+            <h2>Breads</h2>
+            <p>$3.15</p>
+            <div class="product__rating">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+            </div>
+            <button class="btn category-btn">Add To Cart</button>
+          </div>
+        </div>
+      </div>
+    </section>
     <div class="footer__section">
       <div class="footer__main">
         <div class="footer__logo">
