--- a/product.html
+++ b/product.html
@@ -27,9 +27,9 @@
           </div>
           <div class="nav_lists">
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Product</a></li>
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="./About/About.css">About</a></li>
+              <li><a href="./product.html">Product</a></li>
 
               <li><a href="#">Order</a></li>
               <li><a href="#">Contact</a></li>
