--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <li><a href="product.html">Product</a></li>
               
               <li><a href="order.html">Order</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="./Contact/contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
