--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -12,7 +12,7 @@
         <nav class="navbar">
           <div class="left__navbar">
             <div class="logo">
-              <img src="./img/logo.png" alt="logo" />
+              <img src="../img/logo.png" alt="logo" />
             </div>
             <div class="line">
               <p>|</p>
@@ -20,7 +20,7 @@
             <div class="nav_lists">
               <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="./About/About.html">About</a></li>
+                <li><a href="../About/About.html">About</a></li>
                 <li><a href="product.html">Product</a></li>
                 
                 <li><a href="order.html">Order</a></li>
@@ -71,7 +71,7 @@
   </div>
   <div class="map">
     <h2>Visit our place</h2>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12346.93807258823!2d-0.12813818304681056!3d51.50832059322191!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604a1d6aeb935%3A0x93866fd3d4c76c10!2sBuckingham%20Palace!5e0!3m2!1sen!2suk!4v1649572299394!5m2!1sen!2suk" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5757.35472701359!2d-79.30714778932783!3d43.82105127097406!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4d3f63e948cfb%3A0x33b622e1d61cf3ee!2sAllan&#39;s%20Pastry%20Shop%20Ltd.!5e0!3m2!1sen!2sca!4v1713503780677!5m2!1sen!2sca" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
   </div>
 </div>
 
