responsive code added

--- a/About/About.html
+++ b/About/About.html
@@ -44,11 +44,11 @@
           <div class="nav_lists">
             <ul>
               <li><a href="../index.html">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Shop</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">Order</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="./About/About.html">About</a></li>
+              <li><a href="../product/product.html">Product</a></li>
+
+              <li><a href="order.html">Order</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -62,6 +62,12 @@
             <button class="btn">
               Cart(0) <i class="fa-solid fa-cart-shopping"></i>
             </button>
+          </div>
+          <!-- Hamburger Menu -->
+          <div class="hamburger-menu">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
           </div>
         </div>
       </nav>
@@ -169,7 +175,7 @@
     <div class="footer__section">
       <div class="footer__main">
         <div class="footer__logo">
-          <img src="./img/logo.png" alt="" />
+          <img src="../img/logo.png" alt="" />
           <p>
             lorem lorem lorem lorem <br />
             loremlorem lorem
