--- a/product/product.html
+++ b/product/product.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Allan's Pastry Shop Pvt.Ltd</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="./shared/style.css" />
+    <link rel="stylesheet" href="../shared/style.css" />
+    <link rel="stylesheet" href="../product/product.css" />
+    <link rel="stylesheet" href="../style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -20,15 +21,15 @@
       <nav class="navbar">
         <div class="left__navbar">
           <div class="logo">
-            <img src="./img/logo.png" alt="logo" />
+            <img src="../img/logo.png" alt="logo" />
           </div>
           <div class="line">
             <p>|</p>
           </div>
           <div class="nav_lists">
             <ul>
-              <li><a href="./index.html">Home</a></li>
-              <li><a href="./About/About.css">About</a></li>
+              <li><a href="../index.html">Home</a></li>
+              <li><a href="../About/About.html">About</a></li>
               <li><a href="./product.html">Product</a></li>
 
               <li><a href="#">Order</a></li>
@@ -55,7 +56,7 @@
       <div class="product__main--items">
         <div class="products__main">
           <div class="product__main--img">
-            <img src="./img/dish/spicy.png" alt="img" />
+            <img src="../img/dish/spicy.png" alt="img" />
           </div>
           <div class="product__main--text">
             <h2>Breads</h2>
@@ -69,9 +70,10 @@
             <button class="btn category-btn">Add To Cart</button>
           </div>
         </div>
+
         <div class="products__main">
           <div class="product__main--img">
-            <img src="./img/dish/spicy.png" alt="img" />
+            <img src="../img/dish/spicy.png" alt="img" />
           </div>
           <div class="product__main--text">
             <h2>Breads</h2>
@@ -85,9 +87,10 @@
             <button class="btn category-btn">Add To Cart</button>
           </div>
         </div>
+
         <div class="products__main">
           <div class="product__main--img">
-            <img src="./img/dish/spicy.png" alt="img" />
+            <img src="../img/dish/spicy.png" alt="img" />
           </div>
           <div class="product__main--text">
             <h2>Breads</h2>
@@ -101,9 +104,10 @@
             <button class="btn category-btn">Add To Cart</button>
           </div>
         </div>
+
         <div class="products__main">
           <div class="product__main--img">
-            <img src="./img/dish/spicy.png" alt="img" />
+            <img src="../img/dish/spicy.png" alt="img" />
           </div>
           <div class="product__main--text">
             <h2>Breads</h2>
@@ -117,9 +121,10 @@
             <button class="btn category-btn">Add To Cart</button>
           </div>
         </div>
+
         <div class="products__main">
           <div class="product__main--img">
-            <img src="./img/dish/spicy.png" alt="img" />
+            <img src="../img/dish/spicy.png" alt="img" />
           </div>
           <div class="product__main--text">
             <h2>Breads</h2>
@@ -133,9 +138,10 @@
             <button class="btn category-btn">Add To Cart</button>
           </div>
         </div>
+
         <div class="products__main">
           <div class="product__main--img">
-            <img src="./img/dish/spicy.png" alt="img" />
+            <img src="../img/dish/spicy.png" alt="img" />
           </div>
           <div class="product__main--text">
             <h2>Breads</h2>
@@ -149,9 +155,10 @@
             <button class="btn category-btn">Add To Cart</button>
           </div>
         </div>
+
         <div class="products__main">
           <div class="product__main--img">
-            <img src="./img/dish/spicy.png" alt="img" />
+            <img src="../img/dish/spicy.png" alt="img" />
           </div>
           <div class="product__main--text">
             <h2>Breads</h2>
@@ -165,9 +172,10 @@
             <button class="btn category-btn">Add To Cart</button>
           </div>
         </div>
+
         <div class="products__main">
           <div class="product__main--img">
-            <img src="./img/dish/spicy.png" alt="img" />
+            <img src="../img/dish/spicy.png" alt="img" />
           </div>
           <div class="product__main--text">
             <h2>Breads</h2>
@@ -181,9 +189,10 @@
             <button class="btn category-btn">Add To Cart</button>
           </div>
         </div>
+
         <div class="products__main">
           <div class="product__main--img">
-            <img src="./img/dish/spicy.png" alt="img" />
+            <img src="../img/dish/spicy.png" alt="img" />
           </div>
           <div class="product__main--text">
             <h2>Breads</h2>
@@ -202,7 +211,7 @@
     <div class="footer__section">
       <div class="footer__main">
         <div class="footer__logo">
-          <img src="./img/logo.png" alt="" />
+          <img src="../img/logo.png" alt="" />
           <p>
             lorem lorem lorem lorem <br />
             loremlorem lorem
