Fixed css for nav and Footer

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
         </ul>
       </div>
       <div class="follow">
-        <button class="btn hero-btn">Follow Us</button>
+        <button class="p-btn outline full">Follow Us</button>
         <div class="social_media">
           <i class="fa-brands fa-facebook"></i>
           <i class="fa-brands fa-instagram"></i>
