Fixed some part of css

--- a/index.html
+++ b/index.html
@@ -71,23 +71,20 @@
           <div class="category__img">
             <img src="./img/dish/mild.webp" alt="" />
           </div>
-          <hr />
           <div class="category__text">
             <h3>Spicy Patty</h3>
             <p>
-
               Spicy patties are savory pastries filled with a flavorful mixture of seasoned meat, often beef or chicken,
               and spices. Encased in a golden, flaky crust, they offer a satisfying combination of heat and rich taste.
               Popular in various cultures, these handheld delights are perfect for a quick meal or snack on the go.
             </p>
-            <button class="category-btn">Browse Shop</button>
+            <button class="p-btn full">Browse Shop<i class="fa-solid fa-arrow-right"></i></button>
           </div>
         </div>
         <div class="border">
           <div class="category__img">
             <img src="./img/dish/coco-bread.jpg" alt="" />
           </div>
-          <hr />
           <div class="category__text">
             <h3>Coco Breads</h3>
             <p>
@@ -97,14 +94,13 @@
               unique flavor and a pillowy texture that pairs wonderfully with a variety of fillings and. Its versatility
               and delicious taste make it a beloved choice for many seeking meal.
             </p>
-            <button class="category-btn">Browse Shop</button>
+            <button class="p-btn outline full">Browse Shop<i class="fa-solid fa-arrow-right"></i></button>
           </div>
         </div>
         <div class="border">
           <div class="category__img">
             <img src="./img/dish/bulla.jpg" alt="" />
           </div>
-          <hr />
           <div class="category__text">
             <h3>Coconut Bulla</h3>
             <p>
@@ -112,14 +108,13 @@
               crunch on the outside and a moist, flavorful center.These delicious treats are often enjoyed with a cup of
               tea or coffee. Their unique texture and tropical flavor make them a beloved snack in Jamaican cuisine.
             </p>
-            <button class="category-btn">Browse Shop</button>
+            <button class="p-btn full">Browse Shop<i class="fa-solid fa-arrow-right"></i></button>
           </div>
         </div>
         <div class="border">
           <div class="category__img">
             <img src="./img/dish/turnover.jpg" alt="" />
           </div>
-          <hr />
           <div class="category__text">
             <h3>Turnover</h3>
             <p>
@@ -129,7 +124,7 @@
               provides a burst of flavor. Whether enjoyed warm or at room temperature, turnovers are a favorite snack
               for many, perfect for any time of day.
             </p>
-            <button class="category-btn">
+            <button class="p-btn outline full">
               Browse Shop <i class="fa-solid fa-arrow-right"></i>
             </button>
           </div>
@@ -200,7 +195,7 @@
         Iure dolorum aliquam alias voluptatem iste natus, soluta qui eveniet
         et?
       </p>
-      <button class="category-btn">
+      <button class="p-btn outline rounded">
         Shop now <i class="fa-solid fa-arrow-right"></i>
       </button>
     </div>
@@ -223,7 +218,7 @@
         a savory snack or meal enjoyed for its bold taste and comforting
         texture, embodying the rich culinary heritage of Jamaica.
       </p>
-      <button class="category-btn">
+      <button class="p-btn outline rounded">
         Shop now <i class="fa-solid fa-arrow-right"></i>
       </button>
     </div>
@@ -296,8 +291,6 @@
     <div class="contact__section--main">
       <h1>Feel Free To <span>Contact</span> Us Anytime</h1>
       <div class="form__controller">
-
-
         <div class="contact__section--left">
           <h2>Contact Us</h2>
           <form action="#" method="post">
@@ -327,10 +320,7 @@
             <div class="input-group">
               <input class="btn category-btn" type="submit" value="Send Message">
             </div>
-
-
-
-        </div>
+        </form>
         <div class="contact__form--map">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5757.350197527975!2d-79.30796222433348!3d43.821098241556236!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4d3f632713f6f%3A0x76e8c9da46a9cf30!2s3447%20Kennedy%20Rd%2C%20Scarborough%2C%20ON%20M1V%203S1!5e0!3m2!1sen!2sca!4v1712983627913!5m2!1sen!2sca"
@@ -355,14 +345,7 @@
       <i class="fa-solid fa-envelope"></i>
       <p>Email: allanpastryshop.com</p>
     </div>
-    <div class="icon_main">
-      <i class="fa-solid fa-envelope"></i>
-      <p>Email: allanpastryshop.com</p>
-    </div>
-    <div class="icon_main">
-      <i class="fa-solid fa-globe"></i>
-      <p>Visit: 3447 Kannedy Road</p>
-    </div>
+   
     <div class="icon_main">
       <i class="fa-solid fa-globe"></i>
       <p>Visit: 3447 Kannedy Road</p>
@@ -430,7 +413,9 @@
       </div>
     </div>
     <p>&copy; Copyright Reserved @ Allan's pastry Shop Pvt.Ltd-2024</p>
-  </div>
+  </footer>
+<!-- End of footer  -->
+
   <script>
     var MenuItems = document.getElementById("MenuItems");
 
