--- a/about.html
+++ b/about.html
@@ -135,15 +135,14 @@
       />
     </div>
 
-    <!-- Footer Section -->
-
-    <div class="footer__section">
-      <div class="footer__main">
-        <div class="footer__logo">
-          <img src="../img/logo.png" alt="" />
+    <!-- Footer section starts -->
+    <footer class="footer">
+      <div class="footer-main">
+        <div class="footer-logo">
+          <img src="./img/logo.png" />
           <p>
-            lorem lorem lorem lorem <br />
-            loremlorem lorem
+            Your satisfaction is <br />
+            our priority
           </p>
         </div>
         <div class="footer-product">
@@ -185,7 +184,7 @@
           </ul>
         </div>
         <div class="follow">
-          <button class="btn hero-btn">Follow Us</button>
+          <button class="p-btn outline full">Follow Us</button>
           <div class="social_media">
             <i class="fa-brands fa-facebook"></i>
             <i class="fa-brands fa-instagram"></i>
@@ -195,6 +194,7 @@
         </div>
       </div>
       <p>&copy; Copyright Reserved @ Allan's pastry Shop Pvt.Ltd-2024</p>
-    </div>
+    </footer>
+    <!-- End of footer  -->
   </body>
 </html>
