--- a/about.html
+++ b/about.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About | Allan's Pastry Shop Pvt. Ltd.</title>
     <link rel="icon" type="image/x-icon" href="img/logo.png" />
-    <link rel="stylesheet" href="./global.css" />
-    <link rel="stylesheet" href="./about.css" />
-    <link rel="stylesheet" href="./shared/style.css" />
+    <link rel="stylesheet" href="./css/global.css" />
+    <link rel="stylesheet" href="./css/about.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!-- Navigation bar starts -->
