--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Home | Allan's Pastry Shop Pvt. Ltd.</title>
   <link rel="icon" type="image/x-icon" href="img/logo.png" />
-  <link rel="stylesheet" href="global.css" />
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="./shared/style.css" />
+  <link rel="stylesheet" href="./css/global.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/home.css" />
 </head>
 
 <body>
