--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register | Allan's Pastry Shop Pvt. Ltd.</title>
     <link rel="icon" type="image/x-icon" href="img/logo.png" />
-    <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="./css/global.css" />
     <style>
       body {
         background-image: url("img/loginbg.jpg");
