Added user name in top bar if logged in

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="right-navbar">
         <ul class="nav-items">
           <li><a href="index.html"><i class="fa-solid fa-cart-shopping"></i>Cart </a></li>
-          <li><a href="index.html">Login</a></li>
+          <li><a href="index.html" id="userAccount">Login</a></li>
         </ul>
       </div>
     </nav>
@@ -416,7 +416,8 @@
   </footer>
 <!-- End of footer  -->
 
-  <script>
+<script src="./js/index.js"></script>
+  <!-- <script>
     var MenuItems = document.getElementById("MenuItems");
 
     MenuItems.style.maxHeight = "0px";
@@ -432,7 +433,7 @@
 
     }
 
-  </script>
+  </script> -->
 </body>
 
 </html>
