--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                 ><i class="fa-solid fa-cart-shopping"></i>Cart
               </a>
             </li>
-            <li><a href="index.html">Login</a></li>
+            <li><a href="index.html" id="userAccount">Login</a></li>
           </ul>
         </div>
       </nav>
@@ -196,5 +196,7 @@
       <p>&copy; Copyright Reserved @ Allan's pastry Shop Pvt.Ltd-2024</p>
     </footer>
     <!-- End of footer  -->
+
+    <script src="./js/index.js"></script>
   </body>
 </html>
