--- a/product.html
+++ b/product.html
@@ -4,217 +4,62 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Allan's Pastry Shop Pvt.Ltd</title>
-    <link rel="stylesheet" href="../shared/style.css" />
-    <link rel="stylesheet" href="../product/product.css" />
-    <link rel="stylesheet" href="../style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <title>Products | Allan's Pastry Shop Pvt. Ltd.</title>
+    <link rel="icon" type="image/x-icon" href="img/logo.png" />
+    <link rel="stylesheet" href="./css/global.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/product.css" />
   </head>
   <body>
+    <!-- Navigation bar starts -->
     <header class="header">
       <nav class="navbar">
-        <div class="left__navbar">
-          <div class="logo">
-            <img src="../img/logo.png" alt="logo" />
-          </div>
-          <div class="line">
-            <p>|</p>
-          </div>
-          <div class="nav_lists">
-            <ul>
-              <li><a href="../index.html">Home</a></li>
-              <li><a href="../About/About.html">About</a></li>
-              <li><a href="./product.html">Product</a></li>
-
-              <li><a href="#">Order</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
-          </div>
+        <div class="left-navbar">
+          <img height="90px" src="./img/logo.png" alt="logo" />
+          <span class="divider">|</span>
+          <ul class="nav-items">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="./About/About.html">About</a></li>
+            <li><a href="./product/product.html">Product</a></li>
+            <li><a href="order.html">Order</a></li>
+            <li><a href="./Contact/contact.html">Contact</a></li>
+          </ul>
         </div>
-        <div class="right__navbar">
-          <div class="search">
-            <p>Search</p>
-
-            <i class="fa-solid fa-magnifying-glass"></i>
-          </div>
-          <div class="cart">
-            <button class="btn">
-              Cart(0) <i class="fa-solid fa-cart-shopping"></i>
-            </button>
-          </div>
+        <div class="right-navbar">
+          <ul class="nav-items">
+            <li>
+              <a href="index.html"
+                ><i class="fa-solid fa-cart-shopping"></i>Cart
+              </a>
+            </li>
+            <li><a href="index.html" id="userAccount">Login</a></li>
+          </ul>
         </div>
       </nav>
     </header>
+    <!-- Navigation bar ends -->
     <section class="product__section">
-      <h1>Our <span>Products</span></h1>
-      <div class="product__main--items">
-        <div class="products__main">
-          <div class="product__main--img">
-            <img src="../img/dish/spicy.png" alt="img" />
-          </div>
-          <div class="product__main--text">
-            <h2>Breads</h2>
-            <p>$3.15</p>
-            <div class="product__rating">
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star-half-stroke"></i>
-            </div>
-            <button class="btn category-btn">Add To Cart</button>
-          </div>
-        </div>
+      <div >
+        <h1>Our Products</h1>
+        <h2>Available product</h1>
+      </div>
+      
+      <div id="productsList" class="product__main--items">
 
-        <div class="products__main">
-          <div class="product__main--img">
-            <img src="../img/dish/spicy.png" alt="img" />
-          </div>
-          <div class="product__main--text">
-            <h2>Breads</h2>
-            <p>$3.15</p>
-            <div class="product__rating">
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star-half-stroke"></i>
-            </div>
-            <button class="btn category-btn">Add To Cart</button>
-          </div>
-        </div>
-
-        <div class="products__main">
-          <div class="product__main--img">
-            <img src="../img/dish/spicy.png" alt="img" />
-          </div>
-          <div class="product__main--text">
-            <h2>Breads</h2>
-            <p>$3.15</p>
-            <div class="product__rating">
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star-half-stroke"></i>
-            </div>
-            <button class="btn category-btn">Add To Cart</button>
-          </div>
-        </div>
-
-        <div class="products__main">
-          <div class="product__main--img">
-            <img src="../img/dish/spicy.png" alt="img" />
-          </div>
-          <div class="product__main--text">
-            <h2>Breads</h2>
-            <p>$3.15</p>
-            <div class="product__rating">
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star-half-stroke"></i>
-            </div>
-            <button class="btn category-btn">Add To Cart</button>
-          </div>
-        </div>
-
-        <div class="products__main">
-          <div class="product__main--img">
-            <img src="../img/dish/spicy.png" alt="img" />
-          </div>
-          <div class="product__main--text">
-            <h2>Breads</h2>
-            <p>$3.15</p>
-            <div class="product__rating">
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star-half-stroke"></i>
-            </div>
-            <button class="btn category-btn">Add To Cart</button>
-          </div>
-        </div>
-
-        <div class="products__main">
-          <div class="product__main--img">
-            <img src="../img/dish/spicy.png" alt="img" />
-          </div>
-          <div class="product__main--text">
-            <h2>Breads</h2>
-            <p>$3.15</p>
-            <div class="product__rating">
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star-half-stroke"></i>
-            </div>
-            <button class="btn category-btn">Add To Cart</button>
-          </div>
-        </div>
-
-        <div class="products__main">
-          <div class="product__main--img">
-            <img src="../img/dish/spicy.png" alt="img" />
-          </div>
-          <div class="product__main--text">
-            <h2>Breads</h2>
-            <p>$3.15</p>
-            <div class="product__rating">
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star-half-stroke"></i>
-            </div>
-            <button class="btn category-btn">Add To Cart</button>
-          </div>
-        </div>
-
-        <div class="products__main">
-          <div class="product__main--img">
-            <img src="../img/dish/spicy.png" alt="img" />
-          </div>
-          <div class="product__main--text">
-            <h2>Breads</h2>
-            <p>$3.15</p>
-            <div class="product__rating">
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star-half-stroke"></i>
-            </div>
-            <button class="btn category-btn">Add To Cart</button>
-          </div>
-        </div>
-
-        <div class="products__main">
-          <div class="product__main--img">
-            <img src="../img/dish/spicy.png" alt="img" />
-          </div>
-          <div class="product__main--text">
-            <h2>Breads</h2>
-            <p>$3.15</p>
-            <div class="product__rating">
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star"></i>
-              <i class="fa-solid fa-star-half-stroke"></i>
-            </div>
-            <button class="btn category-btn">Add To Cart</button>
-          </div>
-        </div>
       </div>
     </section>
-    <div class="footer__section">
-      <div class="footer__main">
-        <div class="footer__logo">
-          <img src="../img/logo.png" alt="" />
+
+    <div id="loader" class="loader">
+      <i class="fa-solid fa-spinner"></i>
+    </div>
+    <!-- Footer section starts -->
+    <footer class="footer">
+      <div class="footer-main">
+        <div class="footer-logo">
+          <img src="./img/logo.png" />
           <p>
-            lorem lorem lorem lorem <br />
-            loremlorem lorem
+            Your satisfaction is <br />
+            our priority
           </p>
         </div>
         <div class="footer-product">
@@ -256,7 +101,7 @@
           </ul>
         </div>
         <div class="follow">
-          <button class="btn hero-btn">Follow Us</button>
+          <button class="p-btn outline full">Follow Us</button>
           <div class="social_media">
             <i class="fa-brands fa-facebook"></i>
             <i class="fa-brands fa-instagram"></i>
@@ -266,6 +111,10 @@
         </div>
       </div>
       <p>&copy; Copyright Reserved @ Allan's pastry Shop Pvt.Ltd-2024</p>
-    </div>
+    </footer>
+    <!-- End of footer  -->
+    <script src="./js/db.js"></script>
+    <script src="./js/index.js"></script>
+    <script src="./js/product.js"></script>
   </body>
 </html>
