Some cahnge in js file for DB

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
       </div>
       <div class="right-navbar">
         <ul class="nav-items">
-          <li><a href="index.html"><i class="fa-solid fa-cart-shopping"></i>Cart </a></li>
+          <li><a href="index.html"><i class="fa-solid fa-cart-shopping"></i>Cart
+          <span id="cartItemCount"></span>
+          </a></li>
           <li><a href="index.html" id="userAccount">Login</a></li>
         </ul>
       </div>
