--- a/cart.html
+++ b/cart.html
@@ -71,7 +71,9 @@
             <h2>Total Amount</h2>
             <span id="finalAmount"></span>
           </div>
-          <button class="checkout-button p-btn">Checkout</button>
+          <button onclick="placeOrder()" class="checkout-button p-btn">
+            Checkout
+          </button>
         </div>
       </div>
     </section>
@@ -152,5 +154,6 @@
     <script src="./js/db.js"></script>
     <script src="./js/index.js"></script>
     <script src="./js/cart.js"></script>
+    <script src="./js/checkout.js"></script>
   </body>
 </html>
